# OpenCL-parallel-programming

./: README.md
bitonic-sort/: CMakeLists.txt  bitonic_compare_swap.cl  bitonic_sort.cpp
closet-pair-of-points/: CMakeLists.txt  closet_pair.cpp  compute_distances.cl
closet-pair-of-points/common/: closest-pair.txt
conway-game/: base.cl  base.cpp
course_notes/: notes_course_1.md
opencl-base-code/: base.cl  base.cpp
optimal-networks/: CMakeLists.txt  optimal_networks.cpp  sort.cl  steps.txt
optimal-networks/common/: clutils.cpp  clutils.h
parallel-merge/: CMakeLists.txt  merge.cl  parallel_merge.cpp
parallel-scan/: CMakeLists.txt  base.cl  base.cpp  p_scan.cl  parallel_scan.cpp
parallel-sorting/: base.cl  base.cpp
